aula-7-completa/main.tf
provider "aws" { # nuvem que será usada
  version = "~> 2.0"
  region  = "us-east-1" 
}

provider "aws" {
  alias = "us-east-2"
  version = "~> 2.0"
  region  = "us-east-2"
}

# cruar instancia
resource "aws_instance" "dev" {
  count = 3 # quantidade de instacias
  ami = "ami-026c8acd92718196b"
  instance_type = "t2.micro"
  key_name = "terraform-aws"
  tags = {
    Name = "dev${count.index}"  # count.index coloca o numero da instancia no nome
  }
  vpc_security_group_ids = ["${aws_security_group.acesso-ssh.id}"] # adiciona o security group
}

resource "aws_instance" "dev4" { 
  ami = "ami-026c8acd92718196b"
  instance_type = "t2.micro"
  key_name = "terraform-aws"
  tags = {
    Name = "dev4"
  }
  vpc_security_group_ids = ["${aws_security_group.acesso-ssh.id}"]
  depends_on = ["aws_s3_bucket.dev4"] # cria dependencia com o bucket s3 dev4
}

resource "aws_instance" "dev5" {
  ami = "${var.amis["us-east-1"]}"
  instance_type = "t2.micro"
  key_name = "${var.key_name}"
  tags = {
    Name = "dev5"
  }
  vpc_security_group_ids = ["${aws_security_group.acesso-ssh.id}"]
}

resource "aws_instance" "dev6" {
  provider = "aws.us-east-2"
  ami = "${var.amis["us-east-2"]}" # usa a variavel us-east-2 di grupo amis
  instance_type = "t2.micro"
  key_name = "${var.key_name}" # usa a variavel key_name
  tags = {
    Name = "dev6" # adiciona a tag dev6
  } 
  vpc_security_group_ids = ["${aws_security_group.acesso-ssh-us-east-2.id}"] # adiciona no security gproup acesso_ssh
  #us-east2
  depends_on = ["aws_dynamodb_table.dynamodb-homologacao"] # cria depencia ao banco dynamodb-homologacao
}

resource "aws_instance" "dev7" {
  provider = "aws.us-east-2"
  ami = "${var.amis["us-east-2"]}"
  instance_type = "t2.micro"
  key_name = "${var.key_name}"
  tags = {
    Name = "dev7"
  }
  vpc_security_group_ids = ["${aws_security_group.acesso-ssh-us-east-2.id}"]
}
resource "aws_s3_bucket" "dev4" { # cria um bucket s3 chamado dev4
  bucket = "rmerceslabs-dev4"
  acl    = "private"

  tags = {
    Name = "rmerceslabs-dev4"
  }
}

resource "aws_dynamodb_table" "dynamodb-homologacao" { # cria um banco dynamodb e a tabela gamescore
  provider = "aws.us-east-2"
  name           = "GameScores"
  billing_mode   = "PAY_PER_REQUEST" # opção de pagemneto
  hash_key       = "UserId" 
  range_key      = "GameTitle"

  attribute {
    name = "UserId"
    type = "S"
  }

  attribute {
    name = "GameTitle"
    type = "S"
  }
}
